feature: evaluateNovelty 로직 메서드 분리